--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,30 @@
 {
-	"name": "soluble/spreadsheet",
-	"description": "Soluble spreadsheet",
+    "name": "soluble/spreadsheet",
+    "description": "Soluble spreadsheet",
     "license": "MIT",
-	"keywords": [
-        "LibXL", 
-        "Spreadsheet", 
-        "Excel", 
-        "FlexStore"
+    "keywords": [
+        "libxl"
     ],
-	"homepage": "https://github.com/belgattitude/soluble-spreadsheet",
-	"type": "library",
-	"authors": [
-		{
-			"name": "Sébastien Vanvelthem",
-			"homepage": "http://www.nuvolia.com/"
-		}
-	],
+    "homepage": "http://soluble.io",
+    "type": "library",
+    "authors": [
+        {
+            "name": "Sébastien Vanvelthem",
+            "homepage": "https://github.com/belgattitude"
+        }
+    ],
     "autoload": {
         "psr-4": {
-            "Soluble\\Spreadsheet\\": ""
+            "Soluble\\Spreadsheet\\": "src/Soluble/Spreadsheet"
         }
     },
     "require": {
-        "php": ">=5.3.3"
-    },    
-	"suggest": {
-		"soluble/flexstore": "Super easy query data"
-	}
+        "php": ">=5.4.4"
+    },
+    "suggest": {
+        "ext-php_excel": "LibXL and https://github.com/iliaal/php_excel"
+    },
+    "archive": {
+        "exclude": ["test", "doc", ".travis.yml", ".codeclimate.yml", ".coveralls.yml", ".scrutinizer.yml", ".php_cs", ".gitignore", "phpcs.xml"]
+    }
 }
