--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,23 +1,23 @@
 filter:
     paths: [src/*]
-    excluded_paths: [test/*, vendor/*, bin/*, doc/*]
+    excluded_paths: [test/*, vendor/*, bin/*, doc/*, stub/*]
 before_commands:
     - "composer update --prefer-source"
 tools:
     external_code_coverage: 
         timeout: 600
     php_cpd:
-        excluded_dirs: ["vendor", "test", "bin", "doc"]    
+        excluded_dirs: ["vendor", "test", "bin", "doc", "stub"]    
     php_pdepend:
-        excluded_dirs: ["vendor", "test", "bin", "doc"]
+        excluded_dirs: ["vendor", "test", "bin", "doc", "stub"]
     php_loc: 
-        excluded_dirs: ["vendor", "test", "bin", "doc"]
+        excluded_dirs: ["vendor", "test", "bin", "doc", "stub"]
     php_cs_fixer:
         config:
             level: psr2
     php_pdepend:
         enabled: true
-        excluded_dirs: ["vendor", "test", "bin", "doc"]
+        excluded_dirs: ["vendor", "test", "bin", "doc", "stub"]
     php_analyzer:
         enabled: true
         filter:
