--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,11 @@ matrix:
     - php: 5.6
       env:
         - SEND_COVERAGE=true
-        - LIBXL_PHP_VERSION=php7
+        - LIBXL_PHP_VERSION=php5
     - php: 7
+      env:
+        - SEND_COVERAGE=true
+        - LIBXL_PHP_VERSION=php7
             
 env:
     global:
